feat(argo-cd): add authentication for builtin Redis
Signed-off-by: André Frimberger <andre@intellisoft.de>

--- a/charts/argo-cd/templates/redis/secret.yaml
+++ b/charts/argo-cd/templates/redis/secret.yaml
@@ -1,4 +1,22 @@
-# lookup existing secret
+# lookup existing secret with Helm's `lookup` function.
+# At first, it might seem strange to use this function in the ArgoCD ecosystem.
+# However, the purpose of this Helm Chart is to bootstrap ArgoCD. For this use-case
+# you don't have necessarily ArgoCD available, yet.
+#
+# Basically, ArgoCD can be installed with two approaches:
+# 1. Via Helm -> Helm's `lookup` function works as expected
+# 2. Via ArgoCD -> `lookup` will always return an empty value because ArgoCD
+#    calls `helm template` internally. In this case, you need to ignore the password
+#    fields of the secret in `ignoreDifferences`:
+#    ```yaml
+#    ignoreDifferences:
+#    - kind: Secret
+#      name: argocd-redis
+#      jsonPointers:
+#        - /data/redis-password
+#        - /data/redis-password-admin
+#        - /data/redis-password-default
+#    ```
 {{- $secretName :=  include "argo-cd.redis.fullname" . -}}
 {{- $secretObj := (lookup "v1" "Secret" .Release.Namespace $secretName) | default dict }}
 {{- $secretData := (get $secretObj "data") | default dict }}
