--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1168,9 +1168,20 @@ redis:
 
   ## Redis authentication
   auth:
-    # -- enable authentication for Redis. Passwords are auto-generated and stored in argocd-redis
+    # -- Enable authentication for Redis. Passwords are auto-generated and stored in the Secret `argocd-redis`.
+    # If you're managing ArgoCD via ArgoCD you need to ignore the auto-generated password fields in `ignoreDifferences`
+    # , e.g. with
+    # ```
+    # ignoreDifferences:
+    # - kind: Secret
+    #   name: argocd-redis
+    #   jsonPointers:
+    #     - /data/redis-password
+    #     - /data/redis-password-admin
+    #     - /data/redis-password-default
+    # ```
     enabled: false
-    # -- username for connecting to Redis
+    # -- Username for connecting to Redis
     username: argocd
     # -- Annotations to be added to Redis secret
     secretAnnotations: {}
